# tarts

./: 404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
api/client/: index.html
api/events/: index.html
api/structs/: index.html
docs/: index.md
docs/api/: client.md  events.md  structs.md
search/: search_index.json
tarts/: __init__.py  client.py  events.py  io_handler.py  structs.py
tests/: test_actual_langservers.py
